--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+# IDE
+.vscode
+
 # testing
 /coverage
 
@@ -24,6 +27,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+dump/
+*.dev.*
+*@dev/
 
 # local env files
 .env*.local
@@ -34,3 +40,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+package-lock.json
+bun.lockb
